--- a/_data/adversaries-gear.yaml
+++ b/_data/adversaries-gear.yaml
@@ -70,6 +70,7 @@
 - index:
   - 37ee73a9-01c8-440c-a734-ea52e2ff780a:430
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:25
+  - f34ec89d-b99e-4b0c-b9c6-562894526075:430
   generatedId: 4bf19ac6-676d-4571-b5f3-b86a648d687a
   full_name: Bodyguards
 - index:
@@ -87,6 +88,11 @@
 - index:
   - ec2a3fc7-2bcb-4b61-aa97-1d8c81555989:8
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:126
+  - f34ec89d-b99e-4b0c-b9c6-562894526075:429
+  - c88afe62-c2c6-4649-94eb-b5c0c648d411:22
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:411
+  - be0796d8-6ef1-43ec-9fd6-5164e1982bb8:410
+  - 2744c440-3ad1-4f02-ac37-a8745861b4d7:113
   generatedId: f8a643a9-b65b-4801-b887-57bd954531a9
   full_name: Built-in diagnostic and surgical tools
 - index:
@@ -121,6 +127,9 @@
 - index:
   - ec2a3fc7-2bcb-4b61-aa97-1d8c81555989:9
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:111
+  - f34ec89d-b99e-4b0c-b9c6-562894526075:428
+  - c88afe62-c2c6-4649-94eb-b5c0c648d411:22
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:411
   generatedId: a595794f-b7ec-4469-a4ec-0986e03f52b1
   full_name: Built-in Repair Tools
 - index:
@@ -201,11 +210,14 @@
 - index:
   - 37ee73a9-01c8-440c-a734-ea52e2ff780a:413
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:22
+  - f34ec89d-b99e-4b0c-b9c6-562894526075:413
+  - 2744c440-3ad1-4f02-ac37-a8745861b4d7:35
   generatedId: ad2593b6-c9b5-4681-8af8-84f0d8e2e942
   full_name: Datapad with schematics
 - index:
   - 93aef378-66c0-419b-9675-dd9ad54bc3b9:80
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:103
+  - be0796d8-6ef1-43ec-9fd6-5164e1982bb8:404
   generatedId: 2c1d1fa5-52d3-43ba-92b6-482188dfc9a1
   full_name: Dataslate
 - index:
@@ -236,6 +248,7 @@
 - index:
   - 02ff3289-de1a-4365-bced-fea8f6b2743b:36
   - be0796d8-6ef1-43ec-9fd6-5164e1982bb8:411
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:398
   generatedId: 867b75d4-c105-4524-97f5-72438e2af254
   full_name: Emergency Repair Kit
 - index:
@@ -246,6 +259,7 @@
   - f34ec89d-b99e-4b0c-b9c6-562894526075:415
   - '04196a88-99d9-4018-83ef-ca37d68a4869:85'
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:11
+  - 62e817a9-770d-4d62-8100-43d497ce7893:20
   generatedId: ed3abae7-25c2-46c9-8218-80714eaf7b00
   full_name: Encrypted Comlink
 - index:
@@ -259,6 +273,8 @@
 - index:
   - 1189b4a0-d299-42e1-9a9f-7d54b58295d5:48
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:90
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:393
+  - 62e817a9-770d-4d62-8100-43d497ce7893:57
   generatedId: a0fe091b-8c8e-42c3-b1f5-3ecf3d189dd8
   full_name: Encrypted Datapad
 - index:
@@ -294,6 +310,7 @@
   - 75e95de6-f72d-4b74-a33d-568e4b3b0d2e:11
   - cf023ae2-5206-49e0-9e39-550bba0f7f56:139
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:18
+  - f34ec89d-b99e-4b0c-b9c6-562894526075:441
   generatedId: 21397691-bf6e-45fd-ad4f-d80cf9d3f72f
   full_name: Fine Clothing
 - index:
@@ -320,6 +337,8 @@
 - index:
   - 75e95de6-f72d-4b74-a33d-568e4b3b0d2e:95
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:64
+  - f34ec89d-b99e-4b0c-b9c6-562894526075:415
+  - 2744c440-3ad1-4f02-ac37-a8745861b4d7:126
   generatedId: 37b606c1-35cb-4291-9e02-4c119bc072bc
   full_name: Flight Suit
 - index:
@@ -424,6 +443,7 @@
 - index:
   - dfca4764-06e7-4ee3-9ac8-aec65723bdec:72
   - '04196a88-99d9-4018-83ef-ca37d68a4869:140'
+  - 04196a88-99d9-4018-83ef-ca37d68a4869:137
   generatedId: aaaeef18-5e89-4689-baf2-b5e14eab9da7
   full_name: Keys
 - index:
@@ -612,6 +632,7 @@
 - index:
   - f34ec89d-b99e-4b0c-b9c6-562894526075:423
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:64
+  - 2744c440-3ad1-4f02-ac37-a8745861b4d7:127
   generatedId: fc2dd88e-3123-4ba8-8cbc-660d385652f6
   full_name: Sensory Augmentation Package
 - index:
@@ -666,6 +687,7 @@
 - index:
   - 9b5c42a9-d340-4fae-b7f0-12d1e9fbc060:84
   - cf023ae2-5206-49e0-9e39-550bba0f7f56:139
+  - f34ec89d-b99e-4b0c-b9c6-562894526075:441
   generatedId: cc298c95-c257-4396-832a-751fd0aaa12b
   full_name: Uniform
 - index:
@@ -832,6 +854,7 @@
   full_name: Concealed Dataspike in hand
 - index:
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:28
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:410
   generatedId: 7d03128d-fd9d-4691-a3e7-80920247fe23
   full_name: Built-in Repair Kit
 - index:
@@ -936,6 +959,7 @@
   full_name: Integrated Computer Interface
 - index:
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:82
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:393
   generatedId: e8b727e2-3885-4252-9f01-400a642861cb
   full_name: Electronic Forger's Kit and Tools
 - index:
@@ -968,10 +992,12 @@
   full_name: YT-2400 Freighter
 - index:
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:102
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:397
   generatedId: ec2e367a-6ad1-4648-9d8d-0f41ef127162
   full_name: Modified Swoop Bike
 - index:
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:103
+  - be0796d8-6ef1-43ec-9fd6-5164e1982bb8:404
   generatedId: dc179b02-099f-4091-8740-de54972ddc47
   full_name: Loaded Chance Cubes
 - index:
@@ -988,6 +1014,7 @@
   full_name: Modified Byblos Drive Yards G-1A Transport Mist Hunter
 - index:
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:114
+  - be0796d8-6ef1-43ec-9fd6-5164e1982bb8:402
   generatedId: 997ac967-d55e-4e7f-b950-e1b715b99031
   full_name: Musical Instrument
 - index:
@@ -1004,21 +1031,163 @@
   full_name: Retractable Manipulators
 - index:
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:132
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:50
   generatedId: 3b0084a1-cc51-48b2-b53d-de248f3368b8
   full_name: Built-in DF-15 Fusion Generator
 - index:
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:132
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:50
   generatedId: 73982d58-bda4-43dd-9d2e-f11cdff05a86
   full_name: Spectrometer
 - index:
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:132
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:50
   generatedId: 640307ba-31fe-483a-ad08-849ffd53c9d3
   full_name: Multi-Spectral Scanner
 - index:
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:132
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:50
   generatedId: e2ca3be0-9faa-444e-a2c0-2bee22973af1
   full_name: Manipulator Arm
 - index:
   - 5cf48215-d8d4-416b-bcc4-6397af0242eb:132
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:50
   generatedId: ef1924ca-b0ca-4198-b2da-e05c81a8f5b7
   full_name: Power Diagnostics Package
+- index:
+  - 5cf48215-d8d4-416b-bcc4-6397af0242eb:22
+  generatedId: f67b566d-6ab4-4a44-8173-8363bff3c70f
+  full_name: Datapad with Scematics
+- index:
+  - 4b9aa0b3-c2d3-4da3-8bde-c09f815dd4a2:14
+  generatedId: 981cdb37-22a3-4ba4-9e74-3a57b15d7a77
+  full_name: Bucket
+- index:
+  - 4b9aa0b3-c2d3-4da3-8bde-c09f815dd4a2:14
+  generatedId: 40e1880d-5c57-4234-b558-2bd755a0a1d1
+  full_name: Cleaning Supplies
+- index:
+  - f34ec89d-b99e-4b0c-b9c6-562894526075:430
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:409
+  generatedId: 819791ab-1e46-4f94-8fc6-e11cf2af96d6
+  full_name: Personal Shuttle
+- index:
+  - 04196a88-99d9-4018-83ef-ca37d68a4869:140
+  generatedId: ce966f35-e1d8-46fe-af7f-1f67e2b5adea
+  full_name: Life-Form Scanner
+- index:
+  - 04196a88-99d9-4018-83ef-ca37d68a4869:140
+  generatedId: cc0d965d-daa2-43d3-9123-6f23ff5ad2f1
+  full_name: Long-Range Holo-Net Communicator
+- index:
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:402
+  generatedId: 1933f5fe-b666-4035-b2f7-4838158ca650
+  full_name: Encrypted Expense Voucher with 5,000-10,000 credits
+- index:
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:405
+  generatedId: 46abcbac-5ff1-4175-8f47-976fe5fad0e6
+  full_name: Vacuum Sealed Flight Suit
+- index:
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:408
+  generatedId: e83748f4-081f-43be-920b-ed777c726f60
+  full_name: Credit Stick with 200-400 credits
+- index:
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:408
+  generatedId: d8ad6ae8-0944-498f-83c7-2a934eddd278
+  full_name: Servants
+- index:
+  - 37ee73a9-01c8-440c-a734-ea52e2ff780a:409
+  generatedId: ec62406e-b349-49f9-a1c8-4a5604d0d794
+  full_name: Aides
+- index:
+  - 62e817a9-770d-4d62-8100-43d497ce7893:37
+  generatedId: 90ff5019-b3a4-4aff-a3a8-7917bab19192
+  full_name: Dikutruni (Aka'jor-class shuttle)
+- index:
+  - 62e817a9-770d-4d62-8100-43d497ce7893:57
+  generatedId: 0f486bd1-f1ea-4c92-801e-d6b9ddd2d6f6
+  full_name: DNA-encoded Holovoucher (10,000 credit limit)
+- index:
+  - 62e817a9-770d-4d62-8100-43d497ce7893:57
+  generatedId: 98d7ef73-9c75-4645-9182-2b2626da5064
+  full_name: Expensive Robes
+- index:
+  - 62e817a9-770d-4d62-8100-43d497ce7893:57
+  generatedId: 7f395e72-0943-4870-9ffd-1b6d9360d841
+  full_name: Holo-messenger (with direct line to King Molec)
+- index:
+  - 62e817a9-770d-4d62-8100-43d497ce7893:57
+  generatedId: 0128888f-135d-4640-8e8a-bf231eeae7b8
+  full_name: Matching Family Insignia
+- index:
+  - 62e817a9-770d-4d62-8100-43d497ce7893:62
+  generatedId: 2b8756b9-5a78-400e-950b-32a6818380db
+  full_name: Exquisite Garb
+- index:
+  - 62e817a9-770d-4d62-8100-43d497ce7893:64
+  generatedId: d6f8e258-aecc-4162-950d-d07c7302be63
+  full_name: Credit Voucher
+- index:
+  - 62e817a9-770d-4d62-8100-43d497ce7893:65
+  generatedId: c9cb7264-e85f-4933-9f51-22739999ace2
+  full_name: Bail-Bond Chit
+- index:
+  - 62e817a9-770d-4d62-8100-43d497ce7893:78
+  generatedId: 35341327-49ec-4d44-a843-9fd0c0a67eca
+  full_name: Scomplink
+- index:
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:49
+  generatedId: e0d3ea08-ee3b-4987-87f4-b0f2f78ca88d
+  full_name: Built-in Tool Kit
+- index:
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:49
+  generatedId: 739d6b2f-dccd-4565-8b0f-45e67e2c6271
+  full_name: Built-in Ordnance Loading Computer
+- index:
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:50
+  generatedId: 26aab9bc-9b99-4d37-88e0-b63ed5dbae98
+  full_name: Demolitions Scanner
+- index:
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:50
+  generatedId: f4465ac7-70e7-4a53-9ca1-2e87993269cc
+  full_name: Built-in EOD Tool Kit
+- index:
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:50
+  generatedId: 028ff3b9-785f-4b4d-8d5b-56dc399b7c36
+  full_name: Controlled Demolition Device
+- index:
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:51
+  generatedId: 9bc5785e-1de2-447f-a32f-922719100a12
+  full_name: Built-in Construction Tools
+- index:
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:51
+  generatedId: 0657066d-2d65-453a-adaf-644167606cba
+  full_name: I-C4a Droid Interface Programming Suite
+- index:
+  - ced537f4-dfe1-4d4e-8030-b97752b46805:52
+  generatedId: 5f8c89d2-a0d7-433e-bde6-bc9730eeb393
+  full_name: Built-in Science Database
+- index:
+  - d9ac248f-b392-4790-8683-dca15e8ba603:53
+  generatedId: 6178811b-651e-489f-9ec0-d03002a9374f
+  full_name: Built-In Toolkit
+- index:
+  - d9ac248f-b392-4790-8683-dca15e8ba603:53
+  generatedId: e73e5512-7e72-4c94-9d58-c9649c2b1134
+  full_name: General Purpose Scanner
+- index:
+  - 4df0ada2-7749-4c67-8cea-a04ddf36e115:47
+  generatedId: 76adea38-af7c-42f8-8c44-c0579e1db5ac
+  full_name: Built-in Repair and Diagnostic Suite
+- index:
+  - 4df0ada2-7749-4c67-8cea-a04ddf36e115:48
+  generatedId: efa25caf-e3e2-4fea-9468-6890cb239551
+  full_name: On-board Repair and Diadnostic Suite
+- index:
+  - 2744c440-3ad1-4f02-ac37-a8745861b4d7:47
+  generatedId: 5b7d95a7-47bf-4a5f-a664-23ae174a7d19
+  full_name: Royal Guards
+- index:
+  - 2744c440-3ad1-4f02-ac37-a8745861b4d7:139
+  generatedId: 1ed8915b-b3f7-4676-85b8-cc3fc63b2b28
+  full_name: Built-in Comlink
